// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grids basic 1`] = `
<main>
  <wx-view
    class="weui-hidden"
  >
    <wx-view
      class="weui-mask init"
      data-type="tap"
      bind:tap="close"
    />
    <wx-view
      class="weui-half-screen-dialog "
    >
      <wx-view
        class="weui-half-screen-dialog__hd"
      >
        <wx-view
          class="weui-half-screen-dialog__hd__side"
          data-type="close"
          bind:tap="close"
        >
          <wx-view
            class="weui-icon-btn weui-icon-btn_close"
          >
            关闭
          </wx-view>
        </wx-view>
        <wx-view
          class="weui-half-screen-dialog__hd__main"
        >
          <wx-view
            class="weui-half-screen-dialog__title"
          >
            <wx-view
              slot="title"
            >
              测试标题A
            </wx-view>
          </wx-view>
        </wx-view>
        <wx-view
          class="weui-half-screen-dialog__hd__side"
        >
          <wx-view
            class="weui-icon-btn weui-icon-btn_more"
          >
            更多
          </wx-view>
        </wx-view>
      </wx-view>
      <wx-view
        class="weui-half-screen-dialog__bd"
      >
        <wx-view
          slot="desc"
        >
          这是自定义描述区
        </wx-view>
      </wx-view>
      <wx-view
        class="weui-half-screen-dialog__ft"
      >
        <wx-view
          slot="footer"
        >
          <wx-button
            class="weui-btn"
            type="default"
          >
            按钮A
          </wx-button>
          <wx-button
            class="weui-btn"
            type="primary"
          >
            按钮B
          </wx-button>
        </wx-view>
      </wx-view>
    </wx-view>
  </wx-view>
</main>
`;

exports[`grids basic 2`] = `
<main>
  <wx-view
    class="weui-show"
  >
    <wx-view
      class="weui-mask init"
      data-type="tap"
      bind:tap="close"
    />
    <wx-view
      class="weui-half-screen-dialog "
    >
      <wx-view
        class="weui-half-screen-dialog__hd"
      >
        <wx-view
          class="weui-half-screen-dialog__hd__side"
          data-type="close"
          bind:tap="close"
        >
          <wx-view
            class="weui-icon-btn weui-icon-btn_close"
          >
            关闭
          </wx-view>
        </wx-view>
        <wx-view
          class="weui-half-screen-dialog__hd__main"
        >
          <wx-view
            class="weui-half-screen-dialog__title"
          >
            <wx-view
              slot="title"
            >
              测试标题A
            </wx-view>
          </wx-view>
        </wx-view>
        <wx-view
          class="weui-half-screen-dialog__hd__side"
        >
          <wx-view
            class="weui-icon-btn weui-icon-btn_more"
          >
            更多
          </wx-view>
        </wx-view>
      </wx-view>
      <wx-view
        class="weui-half-screen-dialog__bd"
      >
        <wx-view
          slot="desc"
        >
          这是自定义描述区
        </wx-view>
      </wx-view>
      <wx-view
        class="weui-half-screen-dialog__ft"
      >
        <wx-view
          slot="footer"
        >
          <wx-button
            class="weui-btn"
            type="default"
          >
            按钮A
          </wx-button>
          <wx-button
            class="weui-btn"
            type="primary"
          >
            按钮B
          </wx-button>
        </wx-view>
      </wx-view>
    </wx-view>
  </wx-view>
</main>
`;
